tests/snapshots/tui_snapshot__tui_tool_running.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)

  Welcome to Pi! Type a message to begin, or /help for commands.

  ⣾  Running read ...

  ⣾  Processing...

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
