tests/snapshots/tui_snapshot__tui_wrapped_message.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    This is a longer assistant response that
    should wrap across multiple lines.



  [single-line] Enter to send (Shift+Enter: newline, Alt+Enter: multi-line)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
